src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>EEC_Legacy_Contact_ID__c</fullName>
        <description>The External ID value as used in Licensing Manager (or other external feeder systems) for managing UPSERTS into LEAD</description>
        <externalId>true</externalId>
        <inlineHelpText>The External ID value as used in Licensing Manager (or other external feeder systems) for managing UPSERTS into LEAD</inlineHelpText>
        <label>EEC Legacy Contact ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <label>Extension</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Foster_Parent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Foster Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_text__c</fullName>
        <formula>Text(Salutation) +&apos; &apos;+ FirstName + &apos; &apos;+ LastName</formula>
        <label>Name_text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prof_Qualification_Reg_Number__c</fullName>
        <inlineHelpText>Professional Qualification Registry Number</inlineHelpText>
        <label>Prof. Qualification Reg. Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Chair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funding Source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Main Contact / Licensee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Main Contact / Assistant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Contact</fullName>
        <active>true</active>
        <description>Required for FCC, LG and SG license applications</description>
        <label>Contact</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FCC_Assistant_Contact_Role</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Account.RecordType.Name = &quot;Family Child Care&quot;, NOT( Account.AccountRecord_Type_Hidden__c = &quot;FCC Assistant&quot;) , 
TEXT(Role__c) = &quot;Main Contact / Assistant&quot;, NOT (Account.Allow_Renewal_as_Assistant__c) )</errorConditionFormula>
        <errorDisplayField>Role__c</errorDisplayField>
        <errorMessage>Not a valid role for the Assistant type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FCC_Provider_Contact_Role</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Account.RecordType.Name = &quot;Family Child Care&quot;,
 TEXT(Role__c) = &quot;Main Contact / Assistant&quot;, NOT (Account.Allow_Renewal_as_Assistant__c) )</errorConditionFormula>
        <errorDisplayField>Role__c</errorDisplayField>
        <errorMessage>Not a valid role for the Provider type</errorMessage>
    </validationRules>
</CustomObject>